--- a/web/html/calabFooter.html
+++ b/web/html/calabFooter.html
@@ -5,7 +5,7 @@
 	<tbody>
 		<tr>
 			<td class="footerMenuItem" onmouseover="changeMenuStyle(this,'footerMenuItemOver'),showCursor()" onclick="document.location.href='#'" onmouseout="changeMenuStyle(this,'footerMenuItem'),hideCursor()" height="20">
-				&nbsp;&nbsp;<a class="footerMenuLink" href="mailto:ncicb@pop.nci.nih.gov?subject=caLAB - cancer Laboratory Analysis Bench">CONTACT US</a>&nbsp;&nbsp;
+				&nbsp;&nbsp;<a class="footerMenuLink" href="mailto:ncicb@pop.nci.nih.gov?subject=caNanoLab - cancer Nanotechnology Laboratory Analysis Bench">CONTACT US</a>&nbsp;&nbsp;
 			</td>
 
 			<td>
@@ -15,7 +15,7 @@
 			<td class="footerMenuItem" onmouseover="changeMenuStyle(this,'footerMenuItemOver'),showCursor()" 
 									   onclick="window.open('http://www.hhs.gov/Privacy.html', 'new' ,'screenX=0,screenY=0,status=yes,toolbar=no,menubar=no,location=no,width=760,height=500,scrollbars=yes,resizable=yes')" 
 									   onmouseout="changeMenuStyle(this,'footerMenuItem'),hideCursor()" height="20">
-				&nbsp;&nbsp;<a class="footerMenuLink" href="#">PRIVACY NOTICE</a>&nbsp;&nbsp;
+				&nbsp;&nbsp;<a class="footerMenuLink" href="http://www.hhs.gov/Privacy.html">PRIVACY NOTICE</a>&nbsp;&nbsp;
 			</td>
 
 			<td>
@@ -33,7 +33,7 @@
 			<td class="footerMenuItem" onmouseover="changeMenuStyle(this,'footerMenuItemOver'),showCursor()" 
 									   onclick="window.open('http://www3.cancer.gov/accessibility/nci508.htm', 'new' ,'screenX=0,screenY=0,status=yes,toolbar=no,menubar=no,location=no,width=760,height=500,scrollbars=yes,resizable=yes')"
 									   onmouseout="changeMenuStyle(this,'footerMenuItem'),hideCursor()" height="20">
-				&nbsp;&nbsp;<a class="footerMenuLink" href="#">ACCESSIBILITY</a>&nbsp;&nbsp;
+				&nbsp;&nbsp;<a class="footerMenuLink" href="http://www3.cancer.gov/accessibility/nci508.htm">ACCESSIBILITY</a>&nbsp;&nbsp;
 			</td>
 
 			<td>
@@ -41,9 +41,9 @@
 			</td>
 
 			<td class="footerMenuItem" onmouseover="changeMenuStyle(this,'footerMenuItemOver'),showCursor()" 
-									   onclick="window.open('http://ncicbsupport.nci.nih.gov/sw/', 'new' ,'screenX=0,screenY=0,status=yes,toolbar=no,menubar=no,location=no,width=760,height=500,scrollbars=yes,resizable=yes')"
+									   onclick="window.open('http://ncicb.nci.nih.gov/NCICB/support', 'new' ,'screenX=0,screenY=0,status=yes,toolbar=no,menubar=no,location=no,width=760,height=500,scrollbars=yes,resizable=yes')"
 									   onmouseout="changeMenuStyle(this,'footerMenuItem'),hideCursor()" height="20">
-				&nbsp;&nbsp;<a class="footerMenuLink" href="#">APPLICATION SUPPORT</a>&nbsp;&nbsp;
+				&nbsp;&nbsp;<a class="footerMenuLink" href="http://ncicb.nci.nih.gov/NCICB/support">APPLICATION SUPPORT</a>&nbsp;&nbsp;
 			</td>
 
 			<td>
