--- a/web/html/calabBaseSidemenu.html
+++ b/web/html/calabBaseSidemenu.html
@@ -11,7 +11,7 @@
 
 		<tr>
 			<td class="subMenuSecondaryTitle" onmouseover="changeMenuStyle(this,'subMenuSecondaryTitleOver'),showCursor()" onclick="openWindow('http://www.cancer.gov')" onmouseout="changeMenuStyle(this,'subMenuSecondaryTitle'),hideCursor()" height="20">
-				<a class="subMenuSecondary">NCIEEE HOME</a>
+				<a class="subMenuSecondary">NCI HOME</a>
 			</td>
 		</tr>
 
