--- a/web/webHelp/About caLAB.2.9.html
+++ b/web/webHelp/About caLAB.2.9.html
@@ -162,7 +162,7 @@
               </div>
             </td>
             <td width="100%">
-              <div class="Bullet_inner"><a name="1109304">Publish reports</a></div>
+              <div class="Bullet_inner"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Submit%20to%20caLAB.3.1.html#1052621', '');" name="1109304">Publish reports</a></div>
             </td>
           </tr>
         </table>
