--- a/web/webHelp/Searching caLAB.4.12.html
+++ b/web/webHelp/Searching caLAB.4.12.html
@@ -102,7 +102,7 @@
           </td>
         </tr>
       </table>
-      <div class="Body_Text"><a name="1102735">To open detailed information about any search hit, click on its hypertext link in the </a><span style="font-weight: bold;">Particle ID</span> column (first) . caNanoLab opens to the <span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Submit%20to%20caLAB.3.4.html#1116422', '');">Nanoparticle General Information</a></span> page where you can review nanoparticle details. Details for only one nanoparticle display at a time. </div>
+      <div class="Body_Text"><a name="1102735">To open detailed information about any search hit, click on its hypertext link in the </a><span style="font-weight: bold;">Particle ID</span> column (first) . caNanoLab opens to the <span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Submit%20to%20caLAB.3.4.html#1116422', '');">Nanoparticle General Information</a></span> page where you can review nanoparticle details. See <span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Searching%20caLAB.4.13.html#1108215', '');">Nanoparticle Details</a></span>. Details for only one nanoparticle display at a time. </div>
       <div class="Body_Text"><a name="1110228">For information about configuring a nanoparticle search, see </a><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Searching%20caLAB.4.11.html#1102681', '');">Searching Nanoparticles</a></span>.</div>
       <script type="text/javascript" language="JavaScript1.2">
         <!--
