--- a/web/html/calendar.html
+++ b/web/html/calendar.html
@@ -148,7 +148,7 @@ while (dt_current_day.getMonth() == dt_current.getMonth() ||
 if (obj_caller && obj_caller.time_comp)
 	document.write('<form onsubmit="javascript:set_datetime('+dt_current.valueOf()+', true)" name="cal"><tr><td colspan="7" bgcolor="#87CEFA"><font color="White" face="tahoma, verdana" size="2">Time: <input type="text" name="time" value="'+obj_caller.gen_time(this.dt_current)+'" size="8" maxlength="8"></font></td></tr></form>');
 </script>
-</table></tr></td>
+</table></td></tr>
 </table>
 </body>
 </html>
