--- a/web/webHelp/caLAB_0.5/wwhelp/wwhimpl/common/html/reset.htm
+++ b/web/webHelp/caLAB_0.5/wwhelp/wwhimpl/common/html/reset.htm
@@ -101,7 +101,7 @@
  <body>
   <table border="1">
    <tr bgcolor="#CCCCCC" >
-    <th align="left">Cookie</td>
+    <th align="left">Cookie</th>
     <th align="center">Show</th>
     <th align="center">Reset</th>
    </tr>
