--- a/Submit to caLAB.3.1.html
+++ b/Submit to caLAB.3.1.html
@@ -45,6 +45,30 @@
         </table>
       </div>
       <div class="Bullet_outer" style="margin-left: 18pt;">
+        <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1134743">
+          <tr style="vertical-align: baseline;">
+            <td>
+              <div class="Bullet_inner" style="width: 18pt; white-space: nowrap;">•</div>
+            </td>
+            <td width="100%">
+              <div class="Bullet_inner"><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caNanoLab', 'Submit%20to%20caLAB.3.6.html#1128657', '');" name="1134743">Managing Protocols</a></span></div>
+            </td>
+          </tr>
+        </table>
+      </div>
+      <div class="Bullet_outer" style="margin-left: 18pt;">
+        <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1134748">
+          <tr style="vertical-align: baseline;">
+            <td>
+              <div class="Bullet_inner" style="width: 18pt; white-space: nowrap;">•</div>
+            </td>
+            <td width="100%">
+              <div class="Bullet_inner"><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caNanoLab', 'Submit%20to%20caLAB.3.8.html#1103308', '');" name="1134748">Nanoparticle Function</a></span></div>
+            </td>
+          </tr>
+        </table>
+      </div>
+      <div class="Bullet_outer" style="margin-left: 18pt;">
         <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1117340">
           <tr style="vertical-align: baseline;">
             <td>
