--- a/web/webHelp/Searching caLAB.4.1.html
+++ b/web/webHelp/Searching caLAB.4.1.html
@@ -93,6 +93,18 @@
         </table>
       </div>
       <div class="Bullet_outer" style="margin-left: 18pt;">
+        <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1116252">
+          <tr style="vertical-align: baseline;">
+            <td>
+              <div class="Bullet_inner" style="width: 18pt; white-space: nowrap;">•</div>
+            </td>
+            <td width="100%">
+              <div class="Bullet_inner"><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caNanoLab', 'Searching%20caLAB.4.17.html#1115894', '');" name="1116252">Searching Protocols</a></span></div>
+            </td>
+          </tr>
+        </table>
+      </div>
+      <div class="Bullet_outer" style="margin-left: 18pt;">
         <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1111172">
           <tr style="vertical-align: baseline;">
             <td>
