--- a/web/webHelp/Submit to caLAB.3.9.html
+++ b/web/webHelp/Submit to caLAB.3.9.html
@@ -115,7 +115,7 @@
                     </div>
                   </td>
                   <td width="100%">
-                    <div class="Table_Bullet_inner" style="color: #000000; font-family: Arial; font-size: 10.0pt; font-style: normal; font-variant: normal; font-weight: bold; text-transform: none;"><span style="color: #000000; font-family: Arial; font-size: 10.0pt; font-style: normal; font-variant: normal; font-weight: bold; text-transform: none; vertical-align: baseline;"><a name="1118059">Attachment</a></span></div>
+                    <div class="Table_Bullet_inner" style="color: #000000; font-family: Arial; font-size: 10.0pt; font-style: normal; font-variant: normal; font-weight: bold; text-transform: none;"><span style="color: #000000; font-family: Arial; font-size: 10.0pt; font-style: normal; font-variant: normal; font-weight: bold; text-transform: none; vertical-align: baseline;"><a name="1118059">Attachment</a></span>; <span style="font-weight: normal;">Select</span> Bond Type <span style="font-weight: normal;">from the drop-down list.</span></div>
                   </td>
                 </tr>
               </table>
@@ -129,7 +129,7 @@
                     </div>
                   </td>
                   <td width="100%">
-                    <div class="Table_Bullet_inner" style="color: #000000; font-family: Arial; font-size: 10.0pt; font-style: normal; font-variant: normal; font-weight: bold; text-transform: none;"><span style="color: #000000; font-family: Arial; font-size: 10.0pt; font-style: normal; font-variant: normal; font-weight: bold; text-transform: none; vertical-align: baseline;"><a name="1118068">Encapsulation</a></span></div>
+                    <div class="Table_Bullet_inner" style="color: #000000; font-family: Arial; font-size: 10.0pt; font-style: normal; font-variant: normal; font-weight: bold; text-transform: none;"><span style="color: #000000; font-family: Arial; font-size: 10.0pt; font-style: normal; font-variant: normal; font-weight: bold; text-transform: none; vertical-align: baseline;"><a name="1118068">Encapsulation</a></span>; <span style="font-weight: normal;">Enter</span> Localization<span style="font-weight: normal;"> information.</span></div>
                   </td>
                 </tr>
               </table>
@@ -170,7 +170,7 @@
             <div class="Table_Text"><span style="font-weight: bold;"><a name="1118349">DNA</a></span>; Enter Sequence.</div>
             <div class="Table_Text"><span style="font-weight: bold;"><a name="1118350">Probe</a></span>; Enter Name and Type.</div>
             <div class="Table_Text"><span style="font-weight: bold;"><a name="1118395">Image Contrast Agent</a></span>; Enter Name and Type.</div>
-            <div class="Table_Text" style="color: #000000; font-family: Arial; font-size: 10.0pt; font-style: normal; font-variant: normal; font-weight: bold; text-transform: none; vertical-align: baseline;"><span style="color: #000000; font-family: Arial; font-size: 10.0pt; font-style: normal; font-variant: normal; font-weight: bold; text-transform: none; vertical-align: baseline;"><a name="1118396">Other</a></span><span style="font-weight: normal;">;</span> <span style="font-weight: normal;">Enter agent type not included in the list.</span></div>
+            <div class="Table_Text" style="color: #000000; font-family: Arial; font-size: 10.0pt; font-style: normal; font-variant: normal; font-weight: bold; text-transform: none; vertical-align: baseline;"><span style="color: #000000; font-family: Arial; font-size: 10.0pt; font-style: normal; font-variant: normal; font-weight: bold; text-transform: none; vertical-align: baseline;"><a name="1118396">Other</a></span><span style="font-weight: normal;">; Select if agent type is not represented in the list.s.</span></div>
           </td>
         </tr>
         <tr>
@@ -203,43 +203,39 @@
             <div class="Table_Text" style="color: #000000; font-family: Arial; font-size: 10.0pt; font-style: normal; font-variant: normal; font-weight: bold; text-transform: none; vertical-align: baseline;"><span style="color: #000000; font-family: Arial; font-size: 10.0pt; font-style: normal; font-variant: normal; font-weight: bold; text-transform: none; vertical-align: baseline;"><a name="1118442">Target Type</a></span></div>
           </td>
           <td id="tc1118475" style="background-color: White; border-bottom-color: #000000; border-bottom-style: none; border-bottom-width: 1px; border-left-color: #000000; border-left-style: none; border-left-width: 1px; border-right-color: #000000; border-right-style: none; border-right-width: 1px; border-top-color: #000000; border-top-style: none; border-top-width: 1px; padding-bottom: 6px; padding-left: 6px; padding-right: 6px; padding-top: 6px; vertical-align: top;">
-            <div class="Table_Text"><a name="1118444">T</a>arget Type is the category of agent targets. Select the target type:</div>
-            <div class="Table_Bullet_outer" style="margin-left: 0pt;vertical-align: baseline;">
-              <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1118471">
-                <tr style="vertical-align: baseline;">
-                  <td>
-                    <div class="Table_Bullet_inner" style="width: 18pt; white-space: nowrap;color: #000000; font-family: Arial; font-size: 10.0pt; font-style: normal; font-variant: normal; font-weight: bold; text-transform: none;">
-                      <span style="left: 10px; position: relative;">•</span>
-                    </div>
-                  </td>
-                  <td width="100%">
-                    <div class="Table_Bullet_inner" style="color: #000000; font-family: Arial; font-size: 10.0pt; font-style: normal; font-variant: normal; font-weight: bold; text-transform: none;"><span style="color: #000000; font-family: Arial; font-size: 10.0pt; font-style: normal; font-variant: normal; font-weight: bold; text-transform: none; vertical-align: baseline;"><a name="1118471">Recepto</a></span>r</div>
-                  </td>
-                </tr>
-              </table>
-            </div>
+            <div class="Table_Text"><a name="1134825">T</a>arget Type is the category of agent targets. Select the target type:</div>
             <div class="Bullet_table_outer" style="margin-left: 0pt;vertical-align: baseline;">
-              <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1126472">
+              <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1134826">
                 <tr style="vertical-align: baseline;">
                   <td>
                     <div class="Bullet_table_inner" style="width: 18pt; white-space: nowrap;color: #000000; font-family: Arial; font-size: 10.0pt; font-style: normal; font-variant: normal; font-weight: bold; text-transform: none;">•</div>
                   </td>
                   <td width="100%">
-                    <div class="Bullet_table_inner" style="color: #000000; font-family: Arial; font-size: 10.0pt; font-style: normal; font-variant: normal; font-weight: bold; text-transform: none;"><a name="1126472">Antigen</a></div>
+                    <div class="Bullet_table_inner" style="color: #000000; font-family: Arial; font-size: 10.0pt; font-style: normal; font-variant: normal; font-weight: bold; text-transform: none;"><span style="color: #000000; font-family: Arial; font-size: 10.0pt; font-style: normal; font-variant: normal; font-weight: bold; text-transform: none; vertical-align: baseline;"><a name="1134826">Recepto</a></span>r</div>
                   </td>
                 </tr>
               </table>
             </div>
-            <div class="Table_Bullet_outer" style="margin-left: 0pt;vertical-align: baseline;">
+            <div class="Bullet_table_outer" style="margin-left: 0pt;vertical-align: baseline;">
+              <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1134843">
+                <tr style="vertical-align: baseline;">
+                  <td>
+                    <div class="Bullet_table_inner" style="width: 18pt; white-space: nowrap;color: #000000; font-family: Arial; font-size: 10.0pt; font-style: normal; font-variant: normal; font-weight: bold; text-transform: none;">•</div>
+                  </td>
+                  <td width="100%">
+                    <div class="Bullet_table_inner" style="color: #000000; font-family: Arial; font-size: 10.0pt; font-style: normal; font-variant: normal; font-weight: bold; text-transform: none;"><a name="1134843">Antigen</a></div>
+                  </td>
+                </tr>
+              </table>
+            </div>
+            <div class="Bullet_table_outer" style="margin-left: 0pt;vertical-align: baseline;">
               <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1118475">
                 <tr style="vertical-align: baseline;">
                   <td>
-                    <div class="Table_Bullet_inner" style="width: 18pt; white-space: nowrap;color: #000000; font-family: Arial; font-size: 10.0pt; font-style: normal; font-variant: normal; font-weight: bold; text-transform: none;">
-                      <span style="left: 10px; position: relative;">•</span>
-                    </div>
+                    <div class="Bullet_table_inner" style="width: 18pt; white-space: nowrap;color: #000000; font-family: Arial; font-size: 10.0pt; font-style: normal; font-variant: normal; font-weight: bold; text-transform: none;">•</div>
                   </td>
                   <td width="100%">
-                    <div class="Table_Bullet_inner" style="color: #000000; font-family: Arial; font-size: 10.0pt; font-style: normal; font-variant: normal; font-weight: bold; text-transform: none;"><span style="color: #000000; font-family: Arial; font-size: 10.0pt; font-style: normal; font-variant: normal; font-weight: bold; text-transform: none; vertical-align: baseline;"><a name="1118475">Other</a></span></div>
+                    <div class="Bullet_table_inner" style="color: #000000; font-family: Arial; font-size: 10.0pt; font-style: normal; font-variant: normal; font-weight: bold; text-transform: none;"><span style="color: #000000; font-family: Arial; font-size: 10.0pt; font-style: normal; font-variant: normal; font-weight: bold; text-transform: none; vertical-align: baseline;"><a name="1118475">Other</a></span></div>
                   </td>
                 </tr>
               </table>
